--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
     <p>Je travaille en grande partie en noir et gris, même si la couleur ne me dérange pas. Il m’arrive d’en ajouter une touche dans un design, ou selon le sujet abordé, de réaliser des pièces entièrement en couleur. Je suis capable de proposer des flashs simples comme très complexes, dans des thèmes très variés.</p>
     <div class="mini-gallery">
-      <img src="loup.jpg" alt="Tattoo 1" />
+      <img src="loup.JPG" alt="Tattoo 1" />
       <img src="coeur.jpg" alt="Tattoo 2" />
       <img src="varia (1).jpg" alt="Tattoo 1" />
       <img src="varia (2).jpg" alt="Tattoo 2" />
@@ -254,9 +254,9 @@
       <img src="manga (3).jpg" alt="Mini 3" />
       <img src="manga (4).jpg" alt="Mini 1" />
       <img src="manga (2).jpg" alt="Mini 2" />
-      <img src="anya.jpg" alt="Mini 1" />
+      <img src="anya.JPG" alt="Mini 1" />
       <img src="ornem.jpg" alt="Mini 2" />
-      <img src="main.jpg" alt="Mini 3" />
+      <img src="main.JPG" alt="Mini 3" />
       <img src="orn (1).jpg" alt="Mini 1" />
       <img src="orn (3).jpg" alt="Mini 3" />
       <img src="orn (4).jpg" alt="Mini 1" />
